/***********************************************************************
 X3 ChangeLog

2006-09-10  Neil Spierling  <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fixed crash bug.

	* src/spamserv.c: Ignore opers.

2006-08-28  Neil Spierling  <sirvulcan@gmail.com>

	* README: tweaks.

2006-08-27  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.help: Tweaked a , to .

2006-08-27  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.help: Removed privs menu so we can release a tarball.

2006-08-25  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fix uset reply for halfops

	* src/nickserv.help: document the 'b' account flag

2006-08-26  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added hidden host style option and key options
	for style 2.

	* src/hosthiding.h: Remove KEY #defines.

	* src/hosthiding.c: Set the keys only once using the conf values.

	* src/nickserv.c: Generate hidden hosts off crypt hosts instead
	of standard hidden hosts if style is 2.

	* src/proto-common.c: Generate hidden hosts off crypt hosts instead
	of standard hidden hosts if style is 2.

	* src/proto-p10.c: Set crypt host to the crypt IP if there is no
	hostname (unresolved). This is how Nefarious works.

	* src/tools.c: Generate hidden hosts off crypt hosts instead
	of standard hidden hosts if style is 2.

2006-08-24  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Added autojoin USET option, which uses SVSJOIN.

	* src/chanserv.h: Added autojoin USET option, which uses SVSJOIN.

	* src/proto.h: irc_svsjoin decelerations.

	* src/proto-p10.c: Wrote irc_svsjoin plus added the nessecary bits
	for SVSJOIN. Also wrote cmd_svsjoin for if X3 should ever recieve
	an SJ it will be handled properly as a JOIN. Did the same for
	SVSPART.

2006-08-24  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Fixed the +k issue with spamserv.

2006-08-24  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: Added PRIVSET Command.
