@@ -671,7 +671,7 @@
          "INFO:       Sets the infoline that $C sends when you join the channel.",
          "AUTOOP:     Enable or disable $C automatically opping you upon joining or authenticating.",
 	 "AUTOINVITE: $C will invite you to this channel if you have access to and are not in when you authenticate if this setting is on.",
-	 "AUTOJOIN: $C will forcibly you to this channel if you have access to and are not in when you authenticate if this setting is on.",
+	 "AUTOJOIN: $C will forcibly join you into this channel if you have access to and are not in it when you authenticate if this setting is on.",
          "$uSee Also:$u set");
 "USET INFO" ("/msg $C USET <#channel> INFO <info>",
         "This command will set a user defined information message to be displayed when you join the channel. Set to '*' to clear the message.",
